# Wordweaver

./: .gitignore  .readthedocs.yaml  MIGRATION.md  README.md  Wordweaver.spec  flake.nix  main.py  overlay.nix  phonology.py  phonology_const.py  phonology_selector.py  pyproject.toml  requirements.txt  save.json  save2.json  wordweaver_project.py
.github/workflows/: python-app-build.yml  python-app.yml
docs/source/: api_reference.rst  conf.py  contributing.rst  index.rst  installation.rst  user_guide.rst
nix/: README.md  default.nix  overlay.nix
src/: Wordweaver.spec  about.py  default.wwproj  main.py  phonology.py  phonology_const.py  phonology_defaults.py  phonology_selector.py  wordweaver.nsi  wordweaver_project.py
src/icons/: wordweaver.icns
test/: __init__.py  test_phonology.py  test_wordweaver_project.py
